--- a/package.json
+++ b/package.json
@@ -41,25 +41,14 @@
   "devDependencies": {
     "@commitlint/cli": "^16.2.3",
     "@commitlint/config-conventional": "^16.2.1",
+    "@kunlunjs/fabric": "^0.0.3",
     "@types/lodash": "^4.14.181",
     "@types/mockjs": "^1.0.6",
-    "@types/node": "^17.0.23",
-    "@types/prettier": "^2.6.0",
-    "@typescript-eslint/eslint-plugin": "^5.19.0",
-    "@typescript-eslint/parser": "^5.19.0",
+    "@types/node": "^17.0.24",
     "devmoji": "^2.3.0",
     "eslint": "^8.13.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-define-config": "^1.3.0",
-    "eslint-import-resolver-typescript": "^2.7.1",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jest": "^26.1.4",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-tailwindcss": "^3.5.0",
-    "eslint-plugin-testing-library": "^5.3.1",
-    "eslint-plugin-unused-imports": "^2.0.0",
     "husky": "^7.0.4",
-    "lint-staged": "^12.3.7",
+    "lint-staged": "^12.3.8",
     "picocolors": "^1.0.0",
     "prettier": "^2.6.2",
     "pretty-quick": "^3.1.3",
